add make command

--- a/awscli/latest/Dockerfile
+++ b/awscli/latest/Dockerfile
@@ -1,4 +1,4 @@
 FROM python:3-alpine3.8
-RUN apk --update --no-cache add zip
+RUN apk --update --no-cache add zip make
 RUN pip install --upgrade pip setuptools awscli
 RUN rm -r /root/.cache
