--- a/hako/2.3.1/Dockerfile
+++ b/hako/2.3.1/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:3.8 AS builder
-RUN apk add --update --no-cache --virtual .build-base build-base git \
+RUN apk add --update --no-cache --virtual .build-deps build-base git \
       && git clone https://github.com/google/jsonnet.git \
       && cd jsonnet \
       && make libjsonnet.so \
@@ -8,13 +8,13 @@ RUN apk add --update --no-cache --virtual .build-base build-base git \
       && cp include/libjsonnet.h /opt/jsonnet/libjsonnet.h \
       && cd .. \
       && rm -rf jsonnet \
-      && apk del --purge .build-base
+      && apk del --purge .build-deps
 
 FROM ruby:2.5-alpine3.8
-RUN apk --update --no-cache add openssh git zip make docker
 COPY --from=builder /opt/jsonnet/libjsonnet.so /usr/local/lib/libjsonnet.so
 COPY --from=builder /opt/jsonnet/libjsonnet.h /usr/local/include/libjsonnet.h
 RUN apk add --update --no-cache --virtual .build-deps g++ \
       && JSONNET_USE_SYSTEM_LIBRARIES=1 gem install hako -v 2.3.1 -N --no-rdoc --no-ri \
-      && apk del --purge .build-deps
+      && apk del --purge .build-deps \
+      && apk --update --no-cache add openssh git zip make docker
 
