--- a/amazonlinux/python36/latest/Dockerfile
+++ b/amazonlinux/python36/latest/Dockerfile
@@ -4,5 +4,6 @@ RUN yum upgrade -y \
     && yum -y install python36 python36-virtualenv python36-pip zip \
     && rm -rf /var/cache/yum/* \
     && yum clean all
-RUN python3 -m pip install --upgrade pip
-RUN python3 -m pip install numpy
+
+RUN ln -s /usr/bin/pip-3.6 /usr/bin/pip3 \
+    && pip3 install --upgrade pip
