--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,13 +19,13 @@ jobs:
           name: docker build
           working_directory: ~/ci-images/go/1.11.1
           command: |
-            docker build -t ci-image-go .
+            docker build -t $REPOSITORY .
       - run:
           name: docker push
           working_directory: ~/ci-images/go/1.11.1
           command: |
-            docker tag ci-image-go:latest
-            docker push ci-image-go:latest quay.io/repository/saorio/ci-image-go:latest
+            docker tag $REPOSITORY:latest
+            docker push $REPOSITORY:latest quay.io/repository/saorio/$REPOSITORY:latest
 
 workflows:
   version: 2
@@ -33,6 +33,5 @@ workflows:
     jobs:     
       - build_and_push_image_to_quay:
           filters:
-            branches:
-              only:
-                - master
+            tags:
+              only: /.*/
