--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,8 @@ jobs:
           name: docker push
           working_directory: ~/ci-images/go/1.11.1
           command: |
-            docker tag $REPOSITORY $REPOSITORY:latest
-            docker push $REPOSITORY:latest quay.io/repository/saorio/$REPOSITORY:latest
+            docker tag $REPOSITORY quay.io/saorio/$REPOSITORY:latest
+            docker push quay.io/saorio/$REPOSITORY:latest
 
 workflows:
   version: 2
