--- a/eks-kubectl-kustomize-helm/Dockerfile
+++ b/eks-kubectl-kustomize-helm/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3-alpine3.8
-RUN apk --update --no-cache add curl
+RUN apk --update --no-cache add curl wget
 RUN pip install --upgrade pip setuptools awscli
 RUN rm -r /root/.cache
 
@@ -7,6 +7,8 @@ RUN mkdir .kube
 RUN curl -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/aws-iam-authenticator
 RUN curl -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/kubectl
 RUN curl -O -L https://github.com/kubernetes-sigs/kustomize/releases/download/v1.0.11/kustomize_1.0.11_linux_amd64
+RUN wget https://storage.googleapis.com/kubernetes-helm/helm-v2.12.3-linux-amd64.tar.gz
+RUN tar -zxvf helm-v2.12.3-linux-amd64.tar.gz && mv linux-amd64/helm /usr/local/bin/helm
 RUN mv kustomize_*_linux_amd64 kustomize
 RUN chmod +x ./aws-iam-authenticator
 RUN chmod +x ./kubectl
